Do not use XX:MaxPermSize
Removed in Java 11.

Change-Id: Ie1187c00e93f1e4dcbfe636b131c139f98fb4b83
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>