@@ -62,7 +62,7 @@
               <application>org.eclipse.ui.ide.workbench</application>
               <testSuite>org.eclipse.epp.mpc.tests</testSuite>
               <testClass>${test-suite}</testClass>
-              <argLine>-Xmx256m -XX:MaxPermSize=128m -Djava.io.tmpdir=${project.build.directory}/temp ${test-args} ${test-proxy}</argLine>
+              <argLine>-Xmx256m -Djava.io.tmpdir=${project.build.directory}/temp ${test-args} ${test-proxy}</argLine>
               <appArgLine>${test-app-args}</appArgLine>
               
               <!-- run all tests with a space in the application path (this is the osgi.install.area, but the configuration area should follow suit -->
